@@ -1,6 +1,8 @@
 dipy (0.9.2-2) UNRELEASED; urgency=medium
 
   * Update maintainer email.
+  * Modify build to enable reproducible build (Closes: #789747). Patch is
+    courtesy of Juan Picca <jumapico@gmail.com>.
 
  -- Michael Hanke <mih@debian.org>  Tue, 25 Aug 2015 20:31:34 +0200
 
